Update the base plugin version, and set more options
Signed-off-by: Andrew Aylett <andrew@aylett.co.uk>